@@ -11,6 +11,10 @@ Version 1.5.6+svn:
        Noble Lord, and gave leading animations to Wesfolk Outcast line.
    * Under the Burning Suns:
      * Made Elyssa loyal+quick instead of quick+intelligent.
+ * Editor2:
+   * The map editor is automatically started if the binary file used
+     to start Wesnoth contains "editor" somewhere in its name (useful
+     for symlinks).
  * Graphics:
    * New or updated unit frames: Gryphon Rider, Gryphon Master,
      Revenant.
